Fix responsive word-wrap bug

--- a/scss/sections.scss
+++ b/scss/sections.scss
@@ -22,10 +22,6 @@
   ul {
     -webkit-padding-start: 2em;
     -moz-padding-start: 2em;
-
-    li {
-      white-space: nowrap;
-    }
   }
 }
 
